[tool.poetry]
name = "yg-contracts-data"
version = "0.1.0"
description = "Download Yukon Government contract data"
authors = ["Lee O'Mara <lee.omara@yukon.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
